Dodano paragraf czwarty na gałęzi master

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <p>Paragraf pierwszy</p>
     <p>Paragraf drugi</p>
     <p>Paragraf trzeci</p>
+    <p>Paragraf czwarty</p>
 
 
-</body>
+</body> 
 
 </html>
